--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -89,6 +89,7 @@ jobs:
   build_pyodide:
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v3
       - name: Extract branch name
         shell: bash
         run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >>$GITHUB_OUTPUT
